<resources>
    <string name="app_name">FireChatter</string>

    <string name="login_activity_connect">Connect with</string>
    <string name="login_activity_connect_or">or</string>
    <string name="login_activity_email_hint">Email&#8230;</string>
    <string name="login_activity_password_hint">Password&#8230;</string>
    <string name="login_activity_login_btn">Login</string>
    <string name="login_activity_register_btn"><u>Register</u></string>
    <string name="login_activity_progress">Logging in&#8230;</string>
    <string name="login_activity_invalid_email_error">Invalid email format</string>
    <string name="login_activity_invalid_password_error">Invalid password</string>
    <string name="login_activity_no_user_error">User with that email does not exist</string>
    <string name="login_activity_required_field_error">This field is required</string>

    <string name="register_activity_create">Create an account</string>
    <string name="register_activity_name_hint">Name&#8230;</string>
    <string name="register_activity_repeat_password_hint">Repeat password&#8230;</string>
    <string name="register_activity_avatar_btn">Choose</string>
    <string name="register_activity_register_btn">Register</string>
    <string name="register_activity_progress">Registering&#8230;</string>
    <string name="register_activity_mismatch_password_error">Passwords don\'t match</string>
    <string name="register_activity_no_avatar_error">Choose avatar image</string>
    <string name="register_activity_email_exists_error">That email is already in use</string>
    <string name="register_activity_weak_password_error">Password too weak</string>

    <string name="main_activity_chats_empty_msg">No active chats, better start some!</string>
    <string name="main_activity_no_chat_messages">- This chat is empty. -</string>
    <string name="main_menu_logout">Logout</string>

    <string name="users_activity_title">Start a new chat</string>
    <string name="users_activity_empty_msg">You\'re the only FireChatter user :(</string>
    <string name="users_activity_none_selected_msg">Select some people first</string>
    <string name="users_menu_finish">Finish</string>


    <string name="chat_activity_empty_msg">This chat is empty</string>
    <string name="chat_activity_message_hint">Type a message&#8230;</string>

    <string name="facebook_app_id">2123485874335698</string>
    <string name="fb_login_protocol_scheme">fb2123485874335698</string>
    <string name="reset_password_activity_reset_btn">RESET</string>
    <string name="reset_password_activity_create">Enter Email to get password reset instructions.</string>
    <string name="reset_password_activity_progress">Sending email&#8230;</string>
    <string name="login_activity_forgot_password_btn"><u>Forgot password?</u></string>
</resources>
