<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="nsi.firechatter.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/firechatter_logo_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/login_activity_connect"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/login_activity_fb_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:srcCompat="@drawable/fb"
            android:scaleType="centerInside"
            android:tint="@android:color/white"
            android:backgroundTint="@color/colorFacebook"/>

        <ImageButton
            android:id="@+id/login_activity_twitter_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:srcCompat="@drawable/twitter"
            android:scaleType="centerInside"
            android:tint="@android:color/white"
            android:backgroundTint="@color/colorTwitter"/>

        <ImageButton
            android:id="@+id/login_activity_gplus_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:srcCompat="@drawable/googleplus"
            android:scaleType="centerInside"
            android:tint="@android:color/white"
            android:backgroundTint="@color/colorGooglePlus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:orientation="horizontal"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="9"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login_activity_connect_or"
            android:gravity="center"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="9"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <EditText
        android:id="@+id/login_activity_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_email_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/login_activity_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_activity_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/PrimaryButton"
        android:text="@string/login_activity_login_btn"/>

    <TextView
        android:id="@+id/login_activity_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/login_activity_register_btn"/>
</LinearLayout>
