<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="nsi.firechatter.activities.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/firechatter_logo_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/reset_password_activity_create"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_password_activity_email_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reset_password_activity_email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_activity_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/colorPrimaryLight" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reset_password_activity_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/PrimaryButton"
        android:text="@string/reset_password_activity_reset_btn"/>

</LinearLayout>
